--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap");
+/* @font-face {
+  font-family: "Agustina Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Agustina Regular"),
+    url("./assets/fonts/Agustina.woff") format("woff");
+  font-display: swap;
+} */
+
+@font-face {
+  font-family: "Acoustica South";
+  src: local("Acoustica South"),
+    url("./assets/fonts/Acoustica South.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Bassy";
+  src: local("Bassy"), url("./assets/fonts/Bassy.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "Birdlove";
+  src: local("Birdlove"), url("./assets/fonts/Birdlove.ttf") format("truetype");
+  font-weight: normal;
+}
+@font-face {
+  font-family: "aBusterDown";
+  src: local("aBusterDown"),
+    url("./assets/fonts/aBusterDown.ttf") format("truetype");
+  font-weight: normal;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+html,
+body {
+  scroll-behavior: smooth;
+  -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+}
+body {
+  margin: 0;
+  font: 19px / 23px Montserrat, "Montserrat", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-family: "Poppins", sans-serif;
+}
+/* Media Query */
+@media (max-width: 1380px) {
+  html,
+  body {
+    font-size: 16px;
+    line-height: normal;
+  }
+}
+
+h1 {
+  padding-bottom: 10px;
+  margin-top: 3px;
 }
